--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -1,39 +1,15 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
-    <head>
-        <meta http-equiv="content-type" content="width=device-width" />
-        <link rel="stylesheet" href="learn-more.css" type="text/css"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <title>Comprehensive Sex Ed</title>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #006BA6;">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="./landing-page/index.html">Comprehensive Sex Education</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Why Sex Ed?</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Safe Sex Methods</a>
-                            </li>
-                        </ul>
-                    </div>
-=======
 
 <head>
     <meta http-equiv="content-type" content="width=device-width" />
     <link rel="stylesheet" href="learn-more.css" type="text/css" />
+    <link rel="stylesheet" href="../utilities.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/21b584a66f.js" crossorigin="anonymous"></script>
     <title>Comprehensive Sex Ed</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -55,44 +31,60 @@
                             <a class="nav-link active" aria-current="page" href="#">Safe Practices</a>
                         </li>
                     </ul>
->>>>>>> 04fda467b290f05ba573a11fb8a30bb233374109
                 </div>
             </div>
         </nav>
     </header>
     <main class="container">
-        <h2>Contraceptives and Barrier Methods</h2>
+        <section>
+            <h2>Contraceptives and Barrier Methods</h2>
+        </section>
+        <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+        ut aliquip ex ea commodo consequat. </article>
         <section class="container text-center">
             <div class="row" id="row1">
                 <section class="col-lg" id="col1">
                     <figure>
                         <img src="./Buddha-hand-pana.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h3></h3>
+                        <h4>IUD</h4>
+                        <h6>An IUD (intrauterine device) is inserted directly into the uterus. The hormonal type can last up to 3-5 years, and the copper type can last up to 10 years. The hormonal type releases hormones to prevent pregnancy, while copper is a natural spermicide and will kill any sperm that may enter the uterus.</h6>
+                        <p>Effectiveness: 99% </p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $1,300</p>
+                        <p>Usage: Lasts 3-10 years</p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col2">
                     <figure>
                         <img src="./Marriage-pana.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Birth Control Implant</h4>
+                        <h6>The implant is inserted into the upper arm by a medical professional, which releases hormones to prevent pregnancy.</h6>
+                        <p>Effectiveness: 99%</p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $1,300</p>
+                        <p>Usage: Lasts up to 5 years</p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col3">
                     <figure>
                         <img src="./Female reproductive system-amico.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Birth Control Shot</h4>
+                        <h6>The shot is not suitable for long-term use (2+ years) unless no other methods are viable.</h6>
+                        <p>Effectiveness: 96%</p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
         </section>
         <section class="container text-center">
@@ -101,31 +93,40 @@
                     <figure>
                         <img src="./Lesbian couple-amico.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col5">
                     <figure>
                         <img src="./Female reproductive system-cuate.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col6">
                     <figure>
                         <img src="./Buddha hand-amico.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
             </div>
         </section>
@@ -135,36 +136,179 @@
                     <figure>
                         <img src="./Lesbian couple-rafiki.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col8">
                     <figure>
                         <img src="./Baby birth-pana.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
                 <section class="col-lg" id="col9">
                     <figure>
                         <img src="./Buddha hand-cuate.png" class="col-6"></img>
                     </figure>
-                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat.</article>
+                    <article>
+                        <h4>Method Name</h4>
+                        <h6>Description</h6>
+                        <p>Effectiveness: </p>
+                        <p>Prevents STIs: </p>
+                        <p>Cost: </p>
+                        <p>Usage: </p>
+                    </article>
                 </section>
-        </section>
-        </section>
+            <section class="container text-center">
+                <div class="row" id="row4">
+                    <section class="col-lg" id="col10">
+                        <figure>
+                            <img src="./Buddha-hand-pana.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col11">
+                        <figure>
+                            <img src="./Marriage-pana.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col12">
+                        <figure>
+                            <img src="./Female reproductive system-amico.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+            </section>
+            <section class="container text-center">
+                <div class="row" id="row5">
+                    <section class="col-lg" id="col13">
+                        <figure>
+                            <img src="./Lesbian couple-amico.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col14">
+                        <figure>
+                            <img src="./Female reproductive system-cuate.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col15">
+                        <figure>
+                            <img src="./Buddha hand-amico.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                </div>
+            </section>
+            <section class="container text-center">
+                <div class="row" id="row3">
+                    <section class="col-lg" id="col16">
+                        <figure>
+                            <img src="./Lesbian couple-rafiki.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col17">
+                        <figure>
+                            <img src="./Baby birth-pana.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+                    <section class="col-lg" id="col18">
+                        <figure>
+                            <img src="./Buddha hand-cuate.png" class="col-6"></img>
+                        </figure>
+                        <article>
+                            <h3></h3>
+                            <h4>Method Name</h4>
+                            <h6>Description</h6>
+                            <p>Effectiveness: </p>
+                            <p>Prevents STIs: </p>
+                            <p>Cost: </p>
+                            <p>Usage: </p>
+                        </article>
+                    </section>
+            </section>
     </main>
-    <!--<footer></footer>-->
+    <footer class='row footer'>
+        <div class=col-6> <i class="fa-solid fa-dove fa-2x dove-bottom"></i> </div>
+        <div class="col-6 footer-contact">
+            <h6>Comprehensive Sex Education</h6>
+            <a id="" href="#">Home</a>
+            <a id="" href="#">Why Sex Ed?</a>
+            <a id="" href="#">Safe Practices</a>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
