--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="utilities.css" type="text/css" />
     <link rel="stylesheet" href="statistics.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -10,7 +11,6 @@
 </head>
 
 <body>
-    <main>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
@@ -35,9 +35,9 @@
                 </div>
             </nav>
         </header>
-        <main class="container-fluid">
-            <section class="title">
-                <h2>Why is Sex-Ed so important?</h2>
+        <main class=" p-0 m-0">
+            <section class="container-fluid title p-0">
+                <h3>Why is Sex-Ed Important?</h3>
             </section>
 
             <section id="Sex-Edvideo">
@@ -45,12 +45,12 @@
                 <iframe src="https://www.youtube.com/embed/re3x5vXMSX8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfull="" height="350"></iframe>
             </section>
 
-            <section class="lower-three">
+            <section class="lower-three container-fluid justify-content-center h-100 g-0">
                 <section class="row">
-                    <div class="col">
+                    <div class="col d-flex ">
                         <h3> Reproductive Health Rights</h3>
-                        <p>-teens/ adults reproductive rights
-                            -access to birth control and safe+legal abortion care
+                        <p>Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
+
                         </p>
                     </div>
                     <div class="col order-5">
@@ -67,25 +67,24 @@
                     </div>
                 </section>
 
-                <section>
-                    <section class="lower-three">
-                        <div id="health rights">
-                            <h1>Reproductive Health Rights</h1>
-                            <p></p>
 
-                        </div>
-                        <div id="safe-sex">
-                            <h1>Safe sex</h1>
-                            <p></p>
-
-                        </div>
-                        <div id="Misinformation">
-                            <h1> Sex Misinformation </h1>
-                            <p></p>
-
-
-                        </div>
-
-                    </section>
         </main>
+        <footer class='row footer'>
+            <div class=col-6> <i class="fa-solid fa-dove fa-2x dove-bottom"></i> </div>
+            <div class="col-6 footer-contact">
+                <h6>Comprehensive Sex Education</h6>
+                <a id="" href="#">Home</a>
+                <a id="" href="#">Why Sex Ed?</a>
+                <a id="" href="#">Safe Practices</a>
+
+
+            </div>
+
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
+
+</html>
